--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../assets/images/favicon-32x32.png" type="image/png">
+    <link rel="stylesheet" href="../css/style.css">
     <title>EasyBank</title>
 </head>
 <body>
@@ -18,8 +21,13 @@
                 <li><a href="#">Careers</a></li>
             </ul>
         </nav>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
     </header>
-    <main>
+    <!-- <main>
         <section class="hero">
             <div class="hero--img">
                 <img src="../assets/images/image-mockups.png" alt="Imagen de la interfaz del banco en movil">
@@ -106,6 +114,7 @@
         </ul>
         <a href="#" class="button">Request Invite</a>
         <p>©EasyBank. All Rights Reserved</p>
-    </footer>
+    </footer> -->
+<script src="../src/index.js"></script>
 </body>
 </html>
