Añadiendo logica al navbar
Creando la seccion de "Close Nav with Links" en el archivo index.js

--- a/public/index.html
+++ b/public/index.html
@@ -14,11 +14,11 @@
         <img src="../assets/images/logo.svg" class="header--img" alt="Logo EasyBank">
         <nav class="header--navbar">
             <ul class="header--links">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">Careers</a></li>
+                <li><a class="link" href="#">Home</a></li>
+                <li><a class="link" href="#">About</a></li>
+                <li><a class="link" href="#">Contact</a></li>
+                <li><a class="link" href="#">Blog</a></li>
+                <li><a class="link" href="#">Careers</a></li>
             </ul>
         </nav>
         <div class="burger">
