--- a/public/index.html
+++ b/public/index.html
@@ -27,19 +27,19 @@
             <div class="line3"></div>
         </div>
     </header>
-    <!-- <main>
+    <main>
         <section class="hero">
-            <div class="hero--img">
+            <figure class="hero--img">
                 <img src="../assets/images/image-mockups.png" alt="Imagen de la interfaz del banco en movil">
-            </div>
-            <div class="hero--description">
+            </figure>
+            <section class="hero--description">
                 <h1>Next generation digital banking</h1>
                 <p>Take your financial life online. Your Easybank account will be a one-stop-shop for spending, saving, budgeting, investing, and much more.</p>
                 <a href="#" class="button">Request Invite</a>
-            </div>
+            </section>
         </section>
 
-        <section class="description">
+        <!-- <section class="description">
             <h2>Why choose EasyBank?</h2>
             <p class="description--text">We leverage Open Banking to turn your bank account into your financial hub. Control your finances like never before.</p>
             <section class="description--cards">
@@ -93,9 +93,9 @@
                     <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site …</p>
                 </article>
             </section>
-        </section>
+        </section> -->
     </main>
-    <footer>
+    <!-- <footer>
         <img src="../assets/images/logo.svg" alt="Logo EasyBank">
         <div class="social-media">
             <img src="../assets/images/icon-facebook.svg" alt="Facebook">
