--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="../assets/images/favicon-32x32.png" type="image/png">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/responsive.css" media="(min-width: 360px)">
     <title>EasyBank</title>
 </head>
 <body>
@@ -115,11 +116,11 @@
                 </g>
             </svg>
             <div class="social-media">
-                <img src="../assets/images/icon-facebook.svg" alt="Facebook">
-                <img src="../assets/images/icon-youtube.svg" alt="Youtube">
-                <img src="../assets/images/icon-twitter.svg" alt="Twitter">
-                <img src="../assets/images/icon-pinterest.svg" alt="Pinterest">
-                <img src="../assets/images/icon-instagram.svg" alt="Instagram">
+                <a href="#"><img src="../assets/images/icon-facebook.svg" alt="Facebook"></a>
+                <a href="#"><img src="../assets/images/icon-youtube.svg" alt="Youtube"></a>
+                <a href="#"><img src="../assets/images/icon-twitter.svg" alt="Twitter"></a>
+                <a href="#"><img src="../assets/images/icon-pinterest.svg" alt="Pinterest"></a>
+                <a href="#"><img src="../assets/images/icon-instagram.svg" alt="Instagram"></a>
             </div>
         </div>
         <div class="footer--middle">
