--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../assets/images/favicon-32x32.png" type="image/png">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/responsive.css" media="(min-width: 360px)">
+    <link rel="shortcut icon" href="./assets/images/favicon-32x32.png" type="image/png">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css" media="(min-width: 360px)">
     <title>EasyBank</title>
 </head>
 <body>
     <header class="header">
-        <img src="../assets/images/logo.svg" class="header--img" alt="Logo EasyBank">
+        <img src="./assets/images/logo.svg" class="header--img" alt="Logo EasyBank">
         <nav class="header--navbar">
             <ul class="header--links">
                 <li><a class="link" href="#">Home</a></li>
@@ -32,7 +32,7 @@
     <main>
         <section class="hero">
             <figure class="hero--img">
-                <img src="../assets/images/image-mockups.png" alt="Imagen de la interfaz del banco en movil">
+                <img src="./assets/images/image-mockups.png" alt="Imagen de la interfaz del banco en movil">
             </figure>
             <section class="hero--description">
                 <h1>Next generation digital banking</h1>
@@ -46,22 +46,22 @@
             <p class="description--text">We leverage Open Banking to turn your bank account into your financial hub. Control your finances like never before.</p>
             <section class="description--cards">
                 <article class="description--card">
-                    <img src="../assets/images/icon-online.svg" alt="Online card icon">
+                    <img src="./assets/images/icon-online.svg" alt="Online card icon">
                     <h4>Online Banking</h4>
                     <p>Our modern web and mobile applications allow you to keep track of your finances wherever you are in the world.</p>
                 </article>
                 <article class="description--card">
-                    <img src="../assets/images/icon-budgeting.svg" alt="Budgeting card icon">
+                    <img src="./assets/images/icon-budgeting.svg" alt="Budgeting card icon">
                     <h4>Simple Budgeting</h4>
                     <p>See exactly where your money goes each month. Receive notifications when you’re close to hitting your limits.</p>
                 </article>
                 <article class="description--card">
-                    <img src="../assets/images/icon-onboarding.svg" alt="Onboarding card icon">
+                    <img src="./assets/images/icon-onboarding.svg" alt="Onboarding card icon">
                     <h4>Fast Onboarding</h4>
                     <p>We don’t do branches. Open your account in minutes online and start taking control of your finances right away.</p>
                 </article>
                 <article class="description--card">
-                    <img src="../assets/images/icon-api.svg" alt="API card icon">
+                    <img src="./assets/images/icon-api.svg" alt="API card icon">
                     <h4>Open API</h4>
                     <p>Manage your savings, investments, pension, and much more from one account. Tracking your money has never been easier.</p>
                 </article>
@@ -71,25 +71,25 @@
             <h2>Last Articles</h2>
             <section class="blog--cards">
                 <article class="blog--card">
-                    <img src="../assets/images/image-currency.jpg" alt="Image currency">
+                    <img src="./assets/images/image-currency.jpg" alt="Image currency">
                     <small>By Claire Robinson</small>
                     <h4>Receive money in any currency with no fees</h4>
                     <p>The world is getting smaller and we’re becoming more mobile. So why should you be forced to only receive money in a single …</p>
                 </article>
                 <article class="blog--card">
-                    <img src="../assets/images/image-restaurant.jpg" alt="Image restaurant">
+                    <img src="./assets/images/image-restaurant.jpg" alt="Image restaurant">
                     <small>By Wilson Hutton</small>
                     <h4>Treat yourself without worrying about money</h4>
                     <p>Our simple budgeting feature allows you to separate out your spending and set realistic limits each month. That means you …</p>
                 </article>
                 <article class="blog--card">
-                    <img src="../assets/images/image-plane.jpg" alt="Image plane">
+                    <img src="./assets/images/image-plane.jpg" alt="Image plane">
                     <small>By Wilson Hutton</small>
                     <h4>Take your Easybank card wherever you go</h4>
                     <p>We want you to enjoy your travels. This is why we don’t charge any fees on purchases while you’re abroad. We’ll even show you …</p>
                 </article>
                 <article class="blog--card">
-                    <img src="../assets/images/image-confetti.jpg" alt="Image confetti">
+                    <img src="./assets/images/image-confetti.jpg" alt="Image confetti">
                     <small>By Claire Robinson</small>
                     <h4>Our invite-only Beta accounts are now live!</h4>
                     <p>After a lot of hard work by the whole team, we’re excited to launch our closed beta. It’s easy to request an invite through the site …</p>
@@ -116,11 +116,11 @@
                 </g>
             </svg>
             <div class="social-media">
-                <a href="#"><img src="../assets/images/icon-facebook.svg" alt="Facebook"></a>
-                <a href="#"><img src="../assets/images/icon-youtube.svg" alt="Youtube"></a>
-                <a href="#"><img src="../assets/images/icon-twitter.svg" alt="Twitter"></a>
-                <a href="#"><img src="../assets/images/icon-pinterest.svg" alt="Pinterest"></a>
-                <a href="#"><img src="../assets/images/icon-instagram.svg" alt="Instagram"></a>
+                <a href="#"><img src="./assets/images/icon-facebook.svg" alt="Facebook"></a>
+                <a href="#"><img src="./assets/images/icon-youtube.svg" alt="Youtube"></a>
+                <a href="#"><img src="./assets/images/icon-twitter.svg" alt="Twitter"></a>
+                <a href="#"><img src="./assets/images/icon-pinterest.svg" alt="Pinterest"></a>
+                <a href="#"><img src="./assets/images/icon-instagram.svg" alt="Instagram"></a>
             </div>
         </div>
         <div class="footer--middle">
@@ -140,6 +140,6 @@
             <p>©EasyBank. All Rights Reserved</p>
         </div>
     </footer>
-<script src="../src/index.js"></script>
+<script src="./src/index.js"></script>
 </body>
 </html>
